Fix some issues with BS5
Fixed navbar link / button sizes, hover background color, and
course sidebar hover background color

--- a/assets/sass/components/_sidebar.scss
+++ b/assets/sass/components/_sidebar.scss
@@ -23,6 +23,10 @@
 	margin-left: 5px;
 }
 
+.course-menu li > a:hover {
+	background-color: #eeeeee;
+}
+
 #bs-navbar-collapse.minimised 
 {
 	width: 44px;
