Fix more BS5 issues
Fix close buttons in several spors; re-add page-header class

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22823,6 +22823,12 @@ kbd {
   color: #535353;
 }
 
+.page-header {
+  padding-bottom: 9px;
+  margin: 40px 0 20px;
+  border-bottom: 1px solid #eee;
+}
+
 pre {
   padding: 0.6rem;
   border: 1px solid #ccc;
