--- a/course/templates/course/staff/_tag_remove_modal.html
+++ b/course/templates/course/staff/_tag_remove_modal.html
@@ -9,17 +9,16 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button
-                    type="button"
-                    class="close"
-                    data-bs-dismiss="modal"
-                    aria-label="close"
-                >
-                    <span aria-hidden="true">&times;</span>
-                </button>
                 <h4 class="modal-title" id="tag-remove-modal-label">
                     {% translate "UNTAG_MULTIPLE_USERS" %}
                 </h4>
+                <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="close"
+                >
+                </button>
             </div>
             <div class="modal-body">
                 {% blocktranslate trimmed %}
