--- a/exercise/templates/exercise/_duplicate_submission_modal.html
+++ b/exercise/templates/exercise/_duplicate_submission_modal.html
@@ -9,17 +9,16 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button
-					type="button"
-					class="close"
-					data-bs-dismiss="modal"
-					aria-label="{% translate "CLOSE" %}"
-				>
-					<span aria-hidden="true">&times;</span>
-				</button>
 				<h4 class="modal-title" id="duplicate-submission-modal-label">
 					{% translate "DUPLICATE_SUBMISSION_TITLE" %}
 				</h4>
+				<button
+					type="button"
+					class="btn-close"
+					data-bs-dismiss="modal"
+					aria-label="{% translate "CLOSE" %}"
+				>
+				</button>
 			</div>
 			<div class="modal-body">
 				{% translate "DUPLICATE_SUBMISSION" %}
