--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -117,11 +117,11 @@
 					<form method="post" role="form">
 						{% csrf_token %}
 						{% if form.non_field_errors %}
-							<div class="alert alert-danger">
-								<a class="close" aria-label="{% translate 'CLOSE_ERROR_LIST' %}" data-bs-dismiss="alert">×</a>
-									{% for error in form.non_field_errors %}
-										<p>{{ error }}</p>
-									{% endfor %}
+							<div class="alert alert-danger alert-dismissible">
+								{% for error in form.non_field_errors %}
+									<p>{{ error }}</p>
+								{% endfor %}
+								<button type="button" class="btn-close" aria-label="{% translate 'CLOSE_ERROR_LIST' %}" data-bs-dismiss="alert"></button>
 							</div>
 						{% endif %}
 							<div class="form-group{% if form.username.errors %} has-error{% endif %}">
