--- a/notification/templates/notification/_notification_messages.html
+++ b/notification/templates/notification/_notification_messages.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% if count > 0 %}
 <div class="alert alert-danger d-block d-sm-none">
-    <i class="bi-envelope pull-left" aria-hidden="true"></i>
+    <i class="bi-envelope float-start" aria-hidden="true"></i>
     <p>
         {% translate "YOU_HAVE" %} {{ count }} {{ unread_message }}
         <ul>
