--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -142,7 +142,7 @@
 										<span class="help-block">{{ error }}</span>
 									{% endfor %}
 							</div>
-						<div class="form-group">
+						<div class="form-group mt-2">
 							<button type="submit"
 								class="aplus-button--secondary aplus-button--lg">{% translate "LOG_IN" %}</button>
 						</div>
