--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -14,7 +14,7 @@
   <div class="card-body">
     <form method="post" class="form-inline" action="{{ instance|url:'course-configure' }}">
       {% csrf_token %}
-      <div class="form-group">
+      <div class="form-group mb-2">
         <label class="form-label" for="id_url">{% translate "IMPORT_CONTENT_CONFIG_URL" %}</label>
         <input type="text" size="60" class="form-control" id="id_url" name="url" value="{{ instance.configure_url }}">
       </div>
