--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -50,29 +50,31 @@
 <div class="row">
 	<div class="col-sm-offset-2 col-sm-8 col-lg-4">
 		<h2>{% blocktranslate trimmed %}BRAND_PREFERENCES -- {{ brand_name }}{% endblocktranslate %}</h2>
-		<form action="{% url 'set-user-language' %}" method="post" class="form form-horizontal">{% csrf_token %}
+		<form action="{% url 'set-user-language' %}" method="post" class="form form-horizontal mb-2">{% csrf_token %}
 			<div class="form-group">
 				<label class="col-xs-12" for="language-profile">{% translate "LANGUAGE" %}</label>
-				<div class="col-xs-12 col-sm-8">
-					<select name="language" class="form-control" id="language-profile">
-						{% get_current_language as LANGUAGE_CODE %}
-						{% get_available_languages as LANGUAGES %}
-						{% get_language_info_list for LANGUAGES as languages %}
-						{% for language in languages %}
-						<option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %}selected{% endif %}>
-							{{ language.name_local }}
-						</option>
-						{% endfor %}
-					</select>
-				</div>
-				<div class="col-xs-offset-0 col-xs-6 col-sm-4 ">
-					<button type="submit"
-						class="aplus-button--default aplus-button--md btn-block btn-save-profile">{% translate "SAVE" %}</button>
+				<div class="d-flex">
+					<div class="col-xs-12 col-sm-8 me-2">
+						<select name="language" class="form-control" id="language-profile">
+							{% get_current_language as LANGUAGE_CODE %}
+							{% get_available_languages as LANGUAGES %}
+							{% get_language_info_list for LANGUAGES as languages %}
+							{% for language in languages %}
+							<option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %}selected{% endif %}>
+								{{ language.name_local }}
+							</option>
+							{% endfor %}
+						</select>
+					</div>
+					<div class="col-xs-offset-0 col-xs-6 col-sm-4">
+						<button type="submit"
+							class="aplus-button--default aplus-button--md btn-block">{% translate "SAVE" %}</button>
+					</div>
 				</div>
 			</div>
 		</form>
 		<label for="api-access-token">{% translate "API_ACCESS_TOKEN" %}</label>
-		<div class="input-group">
+		<div class="input-group mb-2">
 			<input readonly type="text" class="form-control read-only" id="api-access-token"
 				value="{{ profile.api_token }}">
 			<button data-bs-toggle="tooltip" data-placement="bottom"
