--- a/templates/ajax_search_select.html
+++ b/templates/ajax_search_select.html
@@ -3,7 +3,7 @@
 <div {% include "django/forms/widgets/attrs.html" %}>
 	<ul class="list-inline search-selected">
 		<li>
-			<button class="text-muted bg-secondary-subtle">
+			<button class="aplus-button--secondary aplus-button--sm">
 				<span class="name">None</span>
 				<span aria-label="{% translate 'REMOVE' %}">&times;</span>
 			</button>
