--- a/assets/sass/base/_general.scss
+++ b/assets/sass/base/_general.scss
@@ -26,7 +26,7 @@ kbd {
 .page-header {
 	padding-bottom: 9px;
 	margin: 40px 0 20px;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid var(--bs-secondary-bg, #f9f2f4);
 }
 
 // Border for code blocks like in BS3
