--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -46,6 +46,7 @@ $font-size-base:              1rem !default; // Assumes the browser default, typ
 $h4-font-size:                $font-size-base * 1.25;
 $h5-font-size:                $font-size-base;
 $h6-font-size:                $font-size-base * 0.875;
+$legend-margin-bottom:        1rem !default;
 
 // Legacy panel look for BS5 cards
 //$card-bg: #f5f5f5;
