--- a/edit_course/templates/edit_course/usertag_add.html
+++ b/edit_course/templates/edit_course/usertag_add.html
@@ -15,10 +15,10 @@
 <br />
 <form method="post" class="card form-horizontal">
 	{% csrf_token %}
-	<legend>{% translate "ADD_STUDENT_TAG" %}</legend>
-	{% bootstrap_form form %}
-	<div class="form-group">
-		<div class="col-sm-10 col-sm-offset-2">
+	<div class="card-body">
+		<legend>{% translate "ADD_STUDENT_TAG" %}</legend>
+		{% bootstrap_form form %}
+		<div>
 			<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
 			<a href="{{ instance|url:'course-tags' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
 		</div>
