--- a/external_services/templates/external_services/edit_menu.html
+++ b/external_services/templates/external_services/edit_menu.html
@@ -15,11 +15,11 @@
 {% block coursecontent %}
 <br/>
 <form method="post" class="card form-horizontal">
-    {% csrf_token %}
-    <legend>{% translate "ADD_MENU_ITEM" %}</legend>
-    {% bootstrap_form form %}
-    <div class="form-group">
-        <div class="col-sm-10 col-sm-offset-2">
+    <div class="card-body">
+        {% csrf_token %}
+        <legend>{% translate "ADD_MENU_ITEM" %}</legend>
+        {% bootstrap_form form %}
+        <div>
             <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
             <a href="{{ instance|url:'external-services-list-menu' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
         </div>
