--- a/assets/sass/base/_general.scss
+++ b/assets/sass/base/_general.scss
@@ -81,5 +81,5 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 legend {
-	border-bottom: 1px solid #e5e5e5;
+	border-bottom: 1px solid var(--bs-secondary-bg, #e5e5e5);;
 }
