--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -42,7 +42,7 @@
 	<a class="card-header text-bg-primary{% if not accessible or not open and after_open %} collapsed{% endif %}"
 		role="button" href="#module{{ module.id }}" data-bs-toggle="collapse"
 		aria-expanded="{% if accessible and not after_open or open %}true{% else %}false{% endif %}" aria-controls="#module{{ module.id }}">
-		<h5 class="card-title" style="margin-bottom: 0px">
+		<h5 style="margin-bottom: 0px">
 			{% points_badge module "float-end" %}
 			{% if not accessible %}
 			<span class="badge text-bg-secondary float-end">
@@ -76,7 +76,7 @@
 			</div>
 		</h5>
 	</a>
-	<div class="collapse{% if accessible and not after_open or open %} in{% endif %}" id="module{{ module.id }}">
+	<div class="collapse{% if accessible and not after_open or open %} show{% endif %}" id="module{{ module.id }}">
 	<div class="panel-body">
 		<p>
 			{{ module.opening_time }} &ndash; {{ module.closing_time }}
