--- a/exercise/templates/exercise/staff/_assessment_panel.html
+++ b/exercise/templates/exercise/staff/_assessment_panel.html
@@ -6,7 +6,7 @@
 {% load static %}
 
 <div class="card assessment-panel">
-	<div class="card-header" style="background-color: var(--bs-secondary-bg, grey)">
+	<div class="card-header bg-body-tertiary">
 		{# Heading: default mode #}
 		<div class="assessment-bar assessment-toggle{% if form.errors %} d-none{% endif %}">
 			<div class="assessment-bar-fill assessment-bar-text d-flex flex-row justify-content-between align-items-center">
@@ -21,7 +21,7 @@
 					{% translate 'ASSESSED_BY' %} -- {% translate 'SOMEBODY' %}, {{ submission.grading_time }}
 					{% endif %}
 					{% else %}
-					<i class="bi-x-lg" aria-hidden="true"></i>
+					<i class="bi-x-lg me-1" aria-hidden="true"></i>
 					{% translate 'NOT_ASSESSED_MANUALLY' %}
 					{% endif %}
 				</div>
