--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -76,7 +76,7 @@
 					<ul class="list-unstyled">
 					{% for file in submission.files.all %}
 						<li>
-							<i class="bi-file" aria-hidden="true"></i>
+							<i class="bi-file-earmark-fill" aria-hidden="true"></i>
 							{% include "exercise/_file_link.html" %}
 						</li>
 					{% endfor %}
