--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -2,7 +2,7 @@
 	<div class="site-messages" style="display: flex; justify-content: center;">
 		{% for message in messages %}
 			<div class="alert alert-{% if message.level == 10 %}success{% elif message.level == 40 %}danger{% else %}{{ message.tags }}{% endif %} clearfix d-flex site-message" role="alert">
-				<i class="bi-{% if message.level == 25 %}check{% else %}warning-sign{% endif %}" aria-hidden="true"></i>
+				<i class="bi-{% if message.level == 25 %}check{% else %}exclamation-triangle-fill{% endif %}" aria-hidden="true"></i>
 				<div class="message">{{ message|safe }}</div>
 			</div>
 		{% endfor %}
