--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -219,6 +219,10 @@ iframe {
     max-width: 50%;
     text-overflow: ellipsis;
 }
+/* TODO: This should be moved from main to a proper place */
+.exercise-nav {
+    align-items: center;
+}
 /*@media (min-width: 768px) {
     .col-md-2 .nav a {
         white-space: nowrap;
@@ -310,7 +314,8 @@ td.submissions-dropdown {
 
 /* exercise wells */
 [data-aplus-exercise] {
-    border: 1px solid #bce8f1;/*grey #e3e3e3;*/
+    /*border: 1px solid #bce8f1;/*grey #e3e3e3;*/
+    border: 1px solid var(--bs-border-color-translucent, #e3e3e3);
     border-radius: 4px;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
