--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -66,130 +66,134 @@
 					{% include 'exercise/_exercisecollection.html' %}
 
 				{% elif exercise.is_submittable %}
-					<nav class="exercise-summary navbar navbar-default" aria-label="{{ exercise|parse_localization }}">
-						<ul class="nav navbar-nav exercise-nav">
-							<li class="nav-item">
-								<a href="{% if summary.feedback_revealed and summary.best_submission %}{{ summary.best_submission|url:'submission-plain' }}{% else %}#{% endif %}"
-									class="nav-link exercise-nav-points btn"
-									role="button"
-								>
-									<span>
-										{% if not exercise.category.confirm_the_level %}
-											{% translate "POINTS" %}
-										{% endif %}
-										{% points_badge summary%}
-									</span>
-								</a>
-							</li>
-							<li class="nav-item dropdown">
-								<a class="dropdown-toggle exercise-nav-submissions btn" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false" role="button">
-									<span>
-										{% translate "MY_SUBMISSIONS" %}
-										<span class="badge text-bg-{% if summary.submission_count == 0 %}light{% else %}secondary{% endif %}">
-											{{ summary.submission_count }}
-											{% if exercise.max_submissions %}
-												/ {{ summary.personal_max_submissions|default_if_none:exercise.max_submissions }}
+					<nav class="navbar navbar-expand-sm bg-body-secondary" aria-label="{{ exercise|parse_localization }}">
+						<div class="container-fluid">
+							<ul class="navbar-nav exercise-nav">
+								<li class="nav-item">
+									<a href="{% if summary.feedback_revealed and summary.best_submission %}{{ summary.best_submission|url:'submission-plain' }}{% else %}#{% endif %}"
+										class="nav-link exercise-nav-points btn"
+										role="button"
+									>
+										<span>
+											{% if not exercise.category.confirm_the_level %}
+												{% translate "POINTS" %}
 											{% endif %}
+											{% points_badge summary%}
 										</span>
-										<b class="caret"></b>
-									</span>
-								</a>
-								<ul class="dropdown-menu" style="position: absolute; left: 0; right: auto">
-									{% for submission in submissions %}
-										<li>
-											<a class="dropdown-item" href="{{ submission|url:'submission-plain' }}" data-hash="{{ submission.hash }}">
-												{{ forloop.revcounter }}.
-												{{ submission.date|date:'DATETIME_SECONDS_FORMAT' }}
-												{% points_badge submission%}
-											</a>
-										</li>
-									{% empty %}
-										<li>
-											<a href="#" class="dropdown-item">{% translate "NO_SUBMISSIONS_YET" %}</a>
-										</li>
-									{% endfor %}
-								</ul>
-							</li>
-							{% if not exercise.category.confirm_the_level %}
-								<li class="navbar-text exercise-nav-info">
-									<small class="text-body-secondary">
-										<ul>
-											{% if exercise.points_to_pass > 0 %}
-												<li>
-													<i class="bi-flag" aria-hidden="true"></i>
-													{% blocktranslate trimmed with points=exercise.points_to_pass %}
-														POINTS_REQUIRED_TO_PASS -- {{ points }}
-													{% endblocktranslate %}
-												</li>
-											{% endif %}
-											<li>
-												<i class="bi-clock" aria-hidden="true"></i>
-												{% if summary.personal_deadline %}
-													{% translate "PERSONAL_EXTENDED_DEADLINE" %}
-													{{ summary.personal_deadline }}
-													{% if module.late_submission_penalty > 0 and summary.personal_deadline_has_penalty %}
-													({% blocktranslate trimmed with penalty=module.late_submission_penalty|percent deadline=module.closing_time %}
-														PENALTY_AFTER -- {{ penalty }}, {{ deadline }}
-													{% endblocktranslate %})
-													{% endif %}
-												{% elif exercise.is_late_submission_open %}
-													{% translate "LATE_SUBMISSION_DEADLINE" %} {{ module.late_submission_deadline }}
-													{% if module.late_submission_penalty > 0 %}
-													(-{{ module.late_submission_penalty|percent }}%)
-													{% endif %}
-												{% else %}
-													{% translate "DEADLINE" %}
-													{{ module.closing_time }}
-												{% endif %}
-											</li>
-											<li>
-												<i class="bi-person-fill" aria-hidden="true"></i>
-												{% if exercise.min_group_size == 1 %}
-													{% if exercise.max_group_size == 1 %}
-														{% translate "TO_BE_SUBMITTED_ALONE" %}
-													{% elif exercise.max_group_size == 2 %}
-														{% blocktranslate trimmed with size=2 %}TO_BE_SUBMITTED_ALONE_OR_GROUPS -- {{ size }}{% endblocktranslate %}
-													{% else %}
-														{% blocktranslate trimmed with min=2 max=exercise.max_group_size %}TO_BE_SUBMITTED_ALONE_OR_GROUPS -- {{ min }}, {{ max }}{% endblocktranslate %}
-													{% endif %}
-												{% elif exercise.min_group_size == exercise.max_group_size %}
-													{% blocktranslate trimmed with size=exercise.min_group_size %}TO_BE_SUBMITTED_GROUPS -- {{ size }}{% endblocktranslate %}
-												{% else %}
-													{% blocktranslate trimmed with min=exercise.min_group_size max=exercise.max_group_size %}TO_BE_SUBMITTED_GROUPS -- {{ min }}, {{ max }}{% endblocktranslate %}
-												{% endif %}
-											</li>
-										</ul>
-									</small>
+									</a>
 								</li>
-							{% endif %}
-						</ul>
-						{% if is_course_staff or is_student and model_revealed %}
-							{% comment %} The model solution link is shown even if the student can not
-							open it due to personal extensions. However, this saves some database queries.
-							{% endcomment %}
-							{% if exercise.model_answers %}
-								<a class="aplus-button--secondary aplus-button--md page-modal exercise-nav-button" role="button" href="{{ exercise|url:'exercise-model' }}">
-									<i class="bi-file-earmark-fill" aria-hidden="true"></i>
-									{% translate "SHOW_MODEL_ANSWER" %}
-								</a>
-							{% endif %}
-						{% endif %}
-						{% if is_course_staff or is_student %}
-							{% if exercise.templates %}
-								<a class="aplus-button--secondary aplus-button--md page-modal exercise-nav-button" role="button" href="{{ exercise|url:'exercise-template' }}">
-									<i class="bi-file-earmark-fill" aria-hidden="true"></i>
-									{% translate "SHOW_EXERCISE_TEMPLATE" %}
-								</a>
-							{% endif %}
-						{% endif %}
-						{% if is_course_staff %}
-							<a class="aplus-button--secondary aplus-button--md page-modal exercise-nav-button" role="button" href="{{ exercise|url:'submission-list' }}">
-								<i class="bi-list" aria-hidden="true"></i>
-								{% translate "VIEW_ALL_SUBMISSIONS" %}
-							</a>
-						{% endif %}
+								<li class="nav-item dropdown">
+									<a class="dropdown-toggle exercise-nav-submissions btn" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false" role="button">
+										<span>
+											{% translate "MY_SUBMISSIONS" %}
+											<span class="badge text-bg-{% if summary.submission_count == 0 %}light{% else %}secondary{% endif %}">
+												{{ summary.submission_count }}
+												{% if exercise.max_submissions %}
+													/ {{ summary.personal_max_submissions|default_if_none:exercise.max_submissions }}
+												{% endif %}
+											</span>
+											<b class="caret"></b>
+										</span>
+									</a>
+									<ul class="dropdown-menu" style="position: absolute; left: 0; right: auto">
+										{% for submission in submissions %}
+											<li>
+												<a class="dropdown-item" href="{{ submission|url:'submission-plain' }}" data-hash="{{ submission.hash }}">
+													{{ forloop.revcounter }}.
+													{{ submission.date|date:'DATETIME_SECONDS_FORMAT' }}
+													{% points_badge submission%}
+												</a>
+											</li>
+										{% empty %}
+											<li>
+												<a href="#" class="dropdown-item">{% translate "NO_SUBMISSIONS_YET" %}</a>
+											</li>
+										{% endfor %}
+									</ul>
+								</li>
+								<li class="nav-item">
+									{% if is_course_staff or is_student and model_revealed %}
+										{% comment %} The model solution link is shown even if the student can not
+										open it due to personal extensions. However, this saves some database queries.
+										{% endcomment %}
+										{% if exercise.model_answers %}
+											<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button" role="button" href="{{ exercise|url:'exercise-model' }}">
+												<i class="bi-file-earmark-check" aria-hidden="true"></i>
+												{% translate "SHOW_MODEL_ANSWER" %}
+											</a>
+										{% endif %}
+									{% endif %}
+									{% if is_course_staff or is_student %}
+										{% if exercise.templates %}
+											<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button" role="button" href="{{ exercise|url:'exercise-template' }}">
+												<i class="bi-file-post-fill" aria-hidden="true"></i>
+												{% translate "SHOW_EXERCISE_TEMPLATE" %}
+											</a>
+										{% endif %}
+									{% endif %}
+									{% if is_course_staff %}
+										<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button" role="button" href="{{ exercise|url:'submission-list' }}">
+											<i class="bi-files" aria-hidden="true"></i>
+											{% translate "VIEW_ALL_SUBMISSIONS" %}
+										</a>
+									{% endif %}
+								</li>
+							</ul>
+						</div>
 					</nav>
 				{% endif %}
+				<div class="container-fluid bg-info-subtle text-info-emphasis" style="border-top: 1px solid var(--bs-info);">
+					{% if not exercise.category.confirm_the_level %}
+						<div class="exercise-nav-info">
+							<small style="display: flex; align-items: center; justify-content: space-between;">
+								{% if exercise.points_to_pass > 0 %}
+									<span>
+									<i class="bi-flag" aria-hidden="true"></i>
+									{% blocktranslate trimmed with points=exercise.points_to_pass %}
+										POINTS_REQUIRED_TO_PASS -- {{ points }}
+									{% endblocktranslate %}
+									</span>
+								{% endif %}
+								<span>
+								<i class="bi-clock" aria-hidden="true"></i>
+								{% if summary.personal_deadline %}
+									{% translate "PERSONAL_EXTENDED_DEADLINE" %}
+									{{ summary.personal_deadline }}
+									{% if module.late_submission_penalty > 0 and summary.personal_deadline_has_penalty %}
+									({% blocktranslate trimmed with penalty=module.late_submission_penalty|percent deadline=module.closing_time %}
+										PENALTY_AFTER -- {{ penalty }}, {{ deadline }}
+									{% endblocktranslate %})
+									{% endif %}
+								{% elif exercise.is_late_submission_open %}
+									{% translate "LATE_SUBMISSION_DEADLINE" %} {{ module.late_submission_deadline }}
+									{% if module.late_submission_penalty > 0 %}
+									(-{{ module.late_submission_penalty|percent }}%)
+									{% endif %}
+								{% else %}
+									{% translate "DEADLINE" %}
+									{{ module.closing_time }}
+								{% endif %}
+								</span>
+								<span>
+								<i class="bi-person-fill" aria-hidden="true"></i>
+								{% if exercise.min_group_size == 1 %}
+									{% if exercise.max_group_size == 1 %}
+										{% translate "TO_BE_SUBMITTED_ALONE" %}
+									{% elif exercise.max_group_size == 2 %}
+										{% blocktranslate trimmed with size=2 %}TO_BE_SUBMITTED_ALONE_OR_GROUPS -- {{ size }}{% endblocktranslate %}
+									{% else %}
+										{% blocktranslate trimmed with min=2 max=exercise.max_group_size %}TO_BE_SUBMITTED_ALONE_OR_GROUPS -- {{ min }}, {{ max }}{% endblocktranslate %}
+									{% endif %}
+								{% elif exercise.min_group_size == exercise.max_group_size %}
+									{% blocktranslate trimmed with size=exercise.min_group_size %}TO_BE_SUBMITTED_GROUPS -- {{ size }}{% endblocktranslate %}
+								{% else %}
+									{% blocktranslate trimmed with min=exercise.min_group_size max=exercise.max_group_size %}TO_BE_SUBMITTED_GROUPS -- {{ min }}, {{ max }}{% endblocktranslate %}
+								{% endif %}
+								</span>
+							</small>
+						</div>
+					{% endif %}
+				</div>
 
 				<div
 					class="exercise-response"
