--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -38,7 +38,7 @@
 			class="aplus-button--secondary course-sidebar-expander d-none"
 			title="{% translate 'EXPAND_SIDEBAR' %}"
 			aria-label="{% translate 'EXPAND_SIDEBAR' %}"
-			data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{% translate 'EXPAND_SIDEBAR' %}"
+			data-bs-toggle="tooltip" data-bs-placement="right" title="{% translate 'EXPAND_SIDEBAR' %}"
 		>
 			<i class="bi-layout-text-sidebar" aria-hidden="true"></i>
 		</button>
