--- a/edit_course/templates/edit_course/edit_model.html
+++ b/edit_course/templates/edit_course/edit_model.html
@@ -102,7 +102,7 @@ $(function() {
 {% endif %}
 <script type="text/javascript">
 $(function() {
-	$("[data-trigger]").each(function() {
+	$("[data-bs-trigger]").each(function() {
 		var trigger = $(this);
 		function update() {
 			var triggerValue = parseInt(trigger.val());
