--- a/exercise/templates/exercise/_points_progress.html
+++ b/exercise/templates/exercise/_points_progress.html
@@ -6,7 +6,7 @@
 	{% translate "RESULTS_OF_SOME_ASSIGNMENTS_ARE_CURRENTLY_HIDDEN" %}
 </p>
 {% endif %}
-<div class="progress" data-bs-toggle="tooltip" data-html="true" data-placement="bottom"
+<div class="progress" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom"
     title="{% translate 'POINTS' %}: <span class='text-nowrap'>{{ formatted_points }} / {{ max }}</span>
     {% if required %}
         <br/>
