--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -94,14 +94,14 @@
 				<h4>{% translate "OPTIONS" %}</h4>
 				<div style="display: flex; flex-direction: column;">
 					<label data-bs-toggle="tooltip"
-						data-placement="right"
+						data-bs-placement="right"
 						title="{% translate 'UNOFFICIAL_POINTS_TOOLTIP' %}">
 						<input type="checkbox" class="unofficial-checkbox" value="unofficial">
 						{% translate "RESULTS_SHOW_UNOFFICIAL_POINTS" %}
 						<i class="bi-exclamation-triangle-fill text-danger"></i>
 					</label>
 					<label data-bs-toggle="tooltip"
-						data-placement="right"
+						data-bs-placement="right"
 						title="{% translate 'UNCONFIRMED_POINTS_TOOLTIP' %}">
 						<input type="checkbox" class="unconfirmed-checkbox" value="unconfirmed">
 						{% translate "RESULTS_SHOW_UNCONFIRMED_POINTS" %}
