Fix navbar expander color. Fix placement and spacing of navbar badges. Show theme and user menus on mobile.

--- a/notification/templates/notification/_notification_menu.html
+++ b/notification/templates/notification/_notification_menu.html
@@ -1,7 +1,7 @@
 {% load course %}
 {% if count > 0 %}
 <li role="presentation" class="menu-notification nav-item dropdown" id="notification-alert" style="list-style: none">
-  <a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+  <a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
     <i class="bi-envelope" aria-hidden="true"></i>
     <span class="badge text-bg-danger">{{ count }}</span> <span class="d-none d-xl-inline">{{ unread_message }}</span>
   </a>
